TC-72 fixed messages dropdown alignment breaks

--- a/css/style.css
+++ b/css/style.css
@@ -957,6 +957,10 @@ textarea.placeholder {
     width: 300px !important;
     margin-left: 0 !important;
   }
+  #dropdown-messages {
+    width: 300px !important;
+    margin-left: -40px !important;
+  }
   #dropdown-notifications .arrow {
     margin-left: -142px !important;
   }
